# prompt-library

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
prompts/: INDEX.md  generate-comprehensive-AI-prompt.prompt.md  invisibility-cloak-gap-analysis.prompt.md  time-machine-longitudinal-analysis.prompt.md
scripts/: build_index.py
